--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="?????? ???????? ?????????? ???????????????? ?? - All your links in one place.">
+  <meta name="description" content=" 𝐌𝐂𝐐𝐒 𝐖𝐎𝐑𝐋𝐃 𝐖𝐈𝐓𝐇 𝐀𝐇𝐒𝐀𝐍 - All your links in one place.">
   <title>MCQs World Official</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
@@ -253,7 +253,7 @@
   </section>
 
   <footer>
-    <p>? 2024 MCQs World Official. All Rights Reserved. | Made with Love by Muhammad Makki <br> </p>
+    <p> 2024 MCQs World Official. All Rights Reserved. | Made with Love by Muhammad Makki <br> </p>
   </footer>
 
   <script>
