--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content=" 𝐌𝐂𝐐𝐒 𝐖𝐎𝐑𝐋𝐃 𝐖𝐈𝐓𝐇 𝐀𝐇𝐒𝐀𝐍 - All your links in one place.">
+  <meta name="description" content=" MCQS WORLD WITH AHSAN - All your links in one place.">
   <title>MCQs World Official</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
@@ -201,7 +201,7 @@
 </head>
 <body>
   <header>
-    <h1>?????? ???????? ?????????? ???????????????? ??</h1>
+    <h1> 𝐌𝐂𝐐𝐒 𝐖𝐎𝐑𝐋𝐃 𝐖𝐈𝐓𝐇 𝐀𝐇𝐒𝐀𝐍 </h1>
   </header>
 
   <div class="theme-buttons">
@@ -219,9 +219,9 @@
 
   <section class="links-section">
     <h2>WhatsApp Communities</h2>
-    <a href="https://chat.whatsapp.com/FWMWYMBTTM87OKHmFm5oay" target="_blank">MCQs World (Notes) ?</a>
-    <a href="https://chat.whatsapp.com/EyusaF3YBcU9g5RDGg8nlc" target="_blank">MCQs World (Notes) ?</a>
-    <a href="https://chat.whatsapp.com/GK5eTTlj9Yi5xmlgBvgltq" target="_blank">MCQs World (Notes) ?</a>
+    <a href="https://chat.whatsapp.com/FWMWYMBTTM87OKHmFm5oay" target="_blank">MCQs World (Notes 1) </a>
+    <a href="https://chat.whatsapp.com/EyusaF3YBcU9g5RDGg8nlc" target="_blank">MCQs World (Notes 2) </a>
+    <a href="https://chat.whatsapp.com/GK5eTTlj9Yi5xmlgBvgltq" target="_blank">MCQs World (Notes 3) </a>
     <a href="https://chat.whatsapp.com/EAIf3RcGSZa6g4u1kLpdGt" target="_blank">MCQs World (Test)</a>
   </section>
 
